syntax = "proto3";

package protobuf;

option go_package = "./packet";

service StreamService {
  rpc StreamRequest(stream WorkerStatus) returns (stream WorkerCommand);

  rpc Auth(AuthRequest) returns (AuthResult);
}

message AuthRequest { 

}

message AuthResult { 
	string Af = 1;
	string dsaf = 2;
}

message WorkerStatus { 
	string Hostname = 1; 
	string CPU      = 2;
	string RAM      = 3;
	string Bios     = 4;

	repeated string Gpu     =5;
	repeated string Disk    =6;
	repeated string Network =7;

	string IP        =8;
	string PrivateIP =9;
}



message WorkerCommand { 
  string type = 2;
  map<string,string> data = 1;
}